# TermPane

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  package-lock.json  package.json
.github/workflows/: release-linux.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  menu.rs  model.rs  monitor.rs  persist.rs  preferences.rs  state.rs
src-tauri/src/pty/: io.rs  mod.rs  spawn.rs
src/lib/: alwaysOnTop.ts  api.ts  broadcast.ts  dragState.ts  paneActions.ts  platform.ts  preferences.ts  sidebarLayout.ts  store.ts  theme.ts
src/lib/components/: ConfirmDialog.svelte  LinkButtons.svelte  PaneTreeView.svelte  PinButton.svelte  PreferencesDialog.svelte  Sidebar.svelte  Splitter.svelte  StatusBar.svelte  TerminalCard.svelte  TerminalView.svelte  ThemeSwitcher.svelte
src/lib/styles/: app.css
src/routes/: +page.svelte
