[package]
name = "termpane"
version = "0.2.2"
description = "Gerenciador de terminais embutidos — Tauri + portable-pty"
authors = ["jonas@silveira.eti.br"]
edition = "2021"

[lib]
name = "termpane_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
parking_lot = "0.12"
sysinfo = "0.32"
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.29", features = ["term", "process"] }
dirs = "5"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
